--- a/index.html
+++ b/index.html
@@ -1,40 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>My Simple Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to My Simple Website</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h2>About Us</h2>
-        <p>We are a small company dedicated to providing quality services to our clients.</p>
-      </section>
-      <section>
-        <h2>Contact Us</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
-          <button type="submit">Send</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 My Simple Website</p>
-    </footer>
-  </body>
+<head>
+    <title>Chat AI</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        function sendMessage() {
+            var message = document.getElementById("userInput").value;
+            if (message.trim() !== "") {
+                appendMessage("user", message);
+                document.getElementById("userInput").value = "";
+
+                // Ganti "YOUR_API_KEY" dengan kunci API ChatGPT Anda
+                var apiKey = "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";
+                var apiUrl = "https://api.openai.com/v1/chat/completions";
+
+                $.ajax({
+                    url: apiUrl,
+                    type: "POST",
+                    dataType: "json",
+                    headers: {
+                        "Authorization": "Bearer " + apiKey,
+                        "Content-Type": "application/json"
+                    },
+                    data: JSON.stringify({
+                        "model": "gpt-3.5-turbo",
+                        "messages": [
+                            {"role": "system", "content": "You are a helpful assistant."},
+                            {"role": "user", "content": message}
+                        ]
+                    }),
+                    success: function(response) {
+                        var answer = response.choices[0].message.content;
+                        appendMessage("assistant", answer);
+                    },
+                    error: function(error) {
+                        console.log("Error: " + JSON.stringify(error));
+                    }
+                });
+            }
+        }
+
+        function appendMessage(role, content) {
+            var chatContainer = document.getElementById("chatContainer");
+            var messageElement = document.createElement("div");
+            messageElement.className = "message " + role;
+            messageElement.innerHTML = content;
+            chatContainer.appendChild(messageElement);
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+        }
+    </script>
+    <style>
+        .message {
+            margin: 10px;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            word-wrap: break-word;
+        }
+
+        .user {
+            background-color: #f2f2f2;
+        }
+
+        .assistant {
+            background-color: #e6eaf0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Chat AI</h1>
+    <div id="chatContainer"></div>
+    <div>
+        <input type="text" id="userInput" placeholder="Type your message..." />
+        <button onclick="sendMessage()">Send</button>
+    </div>
+</body>
 </html>
